styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "~antd/dist/antd.css";

@font-face {
    font-family: "SamsungSharpSans";
    font-weight: 700;
    src: url("../assets/fonts/samsungsharpsans-bold.otf");
}

@font-face {
    font-family: "SamsungSharpSans";
    font-weight: 500;
    src: url("../assets/fonts/samsungsharpsans-medium.otf");
}

@font-face {
    font-family: "SamsungSharpSans";
    font-weight: 400;
    src: url("../assets/fonts/samsungsharpsans.otf");
}

html,
body {
    padding: 0;
    margin: 0;
    font-family: SamsungSharpSans, -apple-system, BlinkMacSystemFont, Segoe UI,
        Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
        sans-serif;
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
    transition: all 0.3s ease;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type="number"] {
    -moz-appearance: textfield;
}

body > div:first-child {
    @apply relative;
}

.ash-slider .ant-slider-rail {
    @apply bg-slider-rail;
    height: 2px;
}

.ash-slider .ant-slider-handle {
    @apply bg-bg border-slider-track;
    border-radius: 0;
    height: 7px;
    width: 7px;
    transform: translateX(-50%) rotate(45deg) !important;
    margin-top: -2px;
}

.ash-slider .ant-slider-track,
.ash-slider:hover .ant-slider-track {
    @apply bg-slider-track;
    height: 2px;
}

.ash-slider .ant-slider-dot,
.ash-slider .ant-slider-dot-active {
    @apply bg-bg border-slider-track;
    border-radius: 0;
    width: 7px;
    height: 7px;
    transform: rotate(45deg);
    border-width: 2px;
    border-style: solid;
}

.ant-dropdown {
    transform: translateY(-10px);
}

.ant-notification-notice {
    @apply bg-ash-dark-600;
}

.ant-notification-notice-message {
    color: #00ff75;
}

.ant-notification-notice-with-icon .ant-notification-notice-message {
    margin-left: 0;
    margin-right: 30px;
}

.ant-notification-notice-icon {
    right: 22px;
}

.ant-notification-notice:after {
    @apply bg-pink-600;
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 100%;
    height: 2px;
    animation: notificationTimer 10s 1;
}

.ant-notification-notice-close {
    display: none;
}

@keyframes notificationTimer {
    from {
        right: 0;
    }
    to {
        right: 100%;
    }
}

